# libpresign

./: .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  README.md  libpresign-0.1.2-cp311-cp311-macosx_13_0_arm64.whl  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  wheels.yml
scripts/: build-for-release.sh
src/: module.cpp  module.h
